// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#_emit() Document should return correctly 1`] = `
"[JSDoc]
declare namespace A {
  [JSDoc]
  namespace B {
  
  }
  [JSDoc]
  namespace C {
  
  }
}"
`;

exports[`#emit() should return correctly 1`] = `
"[JSDoc]
namespace A {
  [JSDoc]
  namespace B {
  
  }
  [JSDoc]
  namespace C {
  
  }
}"
`;
